--- a/baseSpringMvcJar/pom.xml
+++ b/baseSpringMvcJar/pom.xml
@@ -299,5 +299,12 @@
 			<artifactId>shiro-web</artifactId>
 			<version>1.2.3</version>
 		</dependency>
+		
+		<!-- commons-fileupload -->
+		<dependency>
+	    	<groupId>commons-fileupload</groupId>
+	    	<artifactId>commons-fileupload</artifactId>
+	    <version>1.3</version>
+	</dependency>
 	</dependencies>
 </project>
