--- a/baseSpringMvcJar/src/main/resources/conf/hibernate/hibernate.properties
+++ b/baseSpringMvcJar/src/main/resources/conf/hibernate/hibernate.properties
@@ -1,5 +1,5 @@
-#email settings
 email.hostName=smtp.163.com
+#email settings
 email.smtpPort=25
 email.smtpUsername=flychensoftware
 email.smtpPassword=358381790
@@ -36,7 +36,7 @@ jdbc.logAbandoned=false
 
 #mysql version database setting
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/sxrs?useUnicode=true&amp;characterEncoding=utf-8
 #jdbc.url=jdbc:mysql://localhost:3306/xwxywb?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=wangjun
